build/log/idf_py_stderr_output_125063
Command: make -j 18 all
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c: In function 'task_1':
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c:19:25: error: 'portTICK_RATE_MS' undeclared (first use in this function); did you mean 'portTICK_PERIOD_MS'?
   19 |         vTaskDelay(1000/portTICK_RATE_MS);
      |                         ^~~~~~~~~~~~~~~~
      |                         portTICK_PERIOD_MS
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c:19:25: note: each undeclared identifier is reported only once for each function it appears in
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c:26:1: error: expected declaration or statement at end of input
   26 | }
      | ^
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c: At top level:
/home/zen_vega/mcu_projects/learn_esp/main/main_rtos_tasks.c:23:6: warning: 'app_main' defined but not used [-Wunused-function]
   23 | void app_main()
      |      ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main_rtos_tasks.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4661: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
